48
================

08/01/24 Persist collation IDs and receipt numbers #1397
08/01/24 Key presses in documents/templates should reset inactivity #1399
07/01/24 SavourLife: fix extra whitespace in breed names
07/01/24 Disabling entry type brings back transfer in box #1378
05/01/24 Fix converters to set EntryTypeID, add Abandoned type #1378
05/01/24 Add animal.EntryTypeID and remove IsTransfer from screens #1378
05/01/24 Fix Firefox SameSite warning on session cookie
05/01/24 Handle localStorage security errors in iOS
04/01/24 Person site search #1377
04/01/24 Restrict second breed to a configurable list of species #1390
02/01/24 Only allow clinic appointments for people with view consulting room #1389
02/01/24 Only allow incidents dispatch ACOs to be chosen with dispatch perm #1108
31/12/23 Strip whitespace from additional/lookup fields when doing advanced find
30/12/23 Use compact format for auditing incoming form deletion, indicate processed
30/12/23 Form tooltips useless on mobile/tablet, move to below label
27/12/23 Tidy up layout of weekly fosterer email, remove dead space
27/12/23 PetRescue: stop translating smart quotes, remove doubling of double quotes
21/12/23 animal find results using a numeric sort on shelter codes with no letters #1387
19/12/13 Fix webkit bug in mobile photo uploader when same photo is chosen again
16/12/13 Batch screen option to recalculate litter counts
15/12/13 Add CoordinatorFirstname/CoordinatorLastname wordkeys #1379
15/12/13 Allow TO token in email templates #1383
15/12/13 Anonymise couple fields #1385
14/12/13 Show altered date on altering vet person links
05/12/23 Include how many records have a value for an additional field #1371
04/12/23 Signing pad redirects to updated mobile UI
04/12/23 Add ASK ENTRYCATEGORY to reporting
01/12/23 Fix error generating report HTML with no columns
01/12/23 Use future owner email address when emailing from animal/media
29/11/23 Fix bug when using > reserves is on and calculating status #1335