@@ -1,6 +1,7 @@
 48
 ================
 
+09/01/24 Calendar: diary items open correct screen and edit click note #1401
 08/01/24 Persist collation IDs and receipt numbers #1397
 08/01/24 Key presses in documents/templates should reset inactivity #1399
 07/01/24 SavourLife: fix extra whitespace in breed names
